--- a/AarhusWebDevCoop/Web.config
+++ b/AarhusWebDevCoop/Web.config
@@ -58,7 +58,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="Server=ASUSMICHAEL\SQLEXPRESS;Database=AarhusWebDevCoop;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="umbracoDbDSN" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AarhusWebDevCoop.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"/>
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
