--- a/AarhusWebDevCoop/bin/AarhusWebDevCoop.dll.config
+++ b/AarhusWebDevCoop/bin/AarhusWebDevCoop.dll.config
@@ -58,7 +58,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN"/>
-    <add name="umbracoDbDSN" connectionString="Server=ASUSMICHAEL\SQLEXPRESS;Database=AarhusWebDevCoop;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="umbracoDbDSN" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AarhusWebDevCoop.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"/>
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
@@ -106,7 +106,7 @@
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
       <add verb="*" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core "/>
     </httpHandlers>
-    <compilation defaultLanguage="c#" debug="true" batch="false" targetFramework="4.5" numRecompilesBeforeAppRestart="50">
+    <compilation defaultLanguage="c#" debug="false" batch="false" targetFramework="4.5" numRecompilesBeforeAppRestart="50">
       <assemblies>
         <remove assembly="Umbraco.ModelsBuilder"/>
         <remove assembly="System.Web.Http"/>
